--- a/app/views/pages/gallery.html.erb
+++ b/app/views/pages/gallery.html.erb
@@ -9,10 +9,10 @@
 											<div><img src="https://693a1bd9979a1f404145-4c0259fbf00f01bae696dd398c523543.ssl.cf3.rackcdn.com/350px-7fe9cbb1-5813-4ada-84a4-72068d2eb7ef.jpg" title="Location image 6" alt="Location image 6" class="" height="350"></div>
 											<div><img src="https://693a1bd9979a1f404145-4c0259fbf00f01bae696dd398c523543.ssl.cf3.rackcdn.com/350px-2dd4757f-5e7a-48bc-948b-5c7d7f27d166.jpg" title="Location image 7" alt="Location image 7" class="" height="350"></div>
 											<div><img src="https://693a1bd9979a1f404145-4c0259fbf00f01bae696dd398c523543.ssl.cf3.rackcdn.com/350px-fb811523-ac2b-4913-8491-a6ba17fc5c6c.jpg" title="Location image 8" alt="Location image 8" class="" height="350"></div>
-							    </div>
+							    </div><!-- #slider center -->
 
                   <div class="clearfix"></div>
-		     </div>
+		     </div><!-- #box -->
 		 
-		</div>
-</div>		
+		</div><!-- #jumbotron center --> 
+</div><!-- #container -->		
