--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -39,7 +39,7 @@
                         <hr>
                         <h2 class="intro-text text-center">О студии</br></h2>
                         <hr>
-                    </div></br><!-- #col-lg-12 --> 
+                    </div></br><!-- #col-lg-12  О студии--> 
                     <div class="col-md-10">
                         <p>Занятия проходят в небольших группах, что дает возможность каждому ученику заниматься по индивидуальной программе, составленной именно для него, исходя из его уровня и пожеланий, с тем, чтобы максимально развить творческие способности.</p>
                         <p>У нас нет одной, усредненной программы для всех – ведь все мы разные, и пути развития у нас тоже различны.</p> 
@@ -48,29 +48,31 @@
                         <p>Кто-то приходит и говорит: « я никогда в жизни не рисовал, но очень хочу писать маслом», и мы начинаем работать маслом, а кто-то приходит с давнишней мечтой об акварели, или пастели, и мы все это пробуем, буквально сразу на первом занятии. У всех свой путь к своим вершинам, ведь  творчество – это волшебный, непредсказуемый, но невероятно увлекательный процесс.</p>
                         <p>Что является очень ценным и создает на занятиях ту неповторимую атмосферу погружения в искусство.</p>
                         <p>Так же, исходя из моего опыта, я считаю очень важным и полезным то, что в группе одновременно занимаются  ученики разного уровня - те, кто пришел на первый урок, и те, кто занимается несколько лет, это взаимно развивает и обогащает учеников.  Это ценный опыт – видеть, как работают другие – ценный опыт Ведь порой нужно именно увидеть, пронаблюдать другую манеру, способ рисования, так же как очень полезно наблюдать как одну и ту же постановку рисуют и в цвете и в графике.</p>
-                        <h3>Как быть новичкам:</h3>
-                        <p>В студии есть все материалы, которые необходимы для занятий. На уроках вы осваиваете все художественные техники, а затем, постепенно, составляете свой собственный набор любимых материалов, который будет с Вами.</p></br>
-                    </div></br><!-- #col-md-8 --> 
+                    </div></br><!-- #col-md-10 Text --> 
                     <div class="clear"></div>
                     <div class="col-lg-12">
                         <hr>
                         <h2 class="intro-text text-center">О преподавателе</br></h2>
                         <hr>
-                    </div></br><!-- #col-lg-12 --> 
-
-                    <div class="featurette" id="services">
-                        <img class="featurette-image img-circle img-responsive pull-left" src=<%= asset_path('Janna-1.jpg') %>/>
-                        <h3 class="featurette-heading text-left">Завидова Жанна Борисовна</br>
-                        </h3>
-                        <p class="lead text-left">
-                            Закончила МГАХИ им Сурикова (1989-1995 гг.)</br>
-                            Отделение станковой графики</br>
-                            С 1995 по 1997 г. - стипендиат Академии Художеств РФ</br>
-                            С 1995 г. - участник различных выставок в России и за рубежом</br>
-                            Работы находятся в частных собраниях России, Швейцарии, США</br>
-                            В 2008 г. создала авторскую студию живописи и рисунка.</br>
-                        </p>
-                    </div><!-- #featurette --> 
+                    </div></br><!-- #col-lg-12 О преподавателе --> 
+                    
+                    <div class="col-md-10">
+                            <div class="featurette" id="services">
+                                <img class="featurette-image img-circle img-responsive pull-left" src=<%= asset_path('Janna-1.jpg') %> alt="Завидова Жанна Борисовна" style="width:250px;height:250px"/>
+                                <div class="col-md-8">
+                                    <h3 class="featurette-heading text-left">Завидова Жанна Борисовна</br>
+                                    </h3>
+                                    <p class="lead text-left">
+                                        Закончила МГАХИ им Сурикова (1989-1995 гг.)</br>
+                                        Отделение станковой графики</br>
+                                        С 1995 по 1997 г. - стипендиат Академии Художеств РФ</br>
+                                        С 1995 г. - участник различных выставок в России и за рубежом</br>
+                                        Работы находятся в частных собраниях России, Швейцарии, США</br>
+                                        В 2008 г. создала авторскую студию живописи и рисунка.</br>
+                                    </p>
+                                </div><!-- col-md-8 -->     
+                            </div><!-- #featurette --> 
+                    </div><!-- #col-md-10 IMG+Опыт преподавателя -->         
 
                     <div class="clearfix"></div>
             </div><!-- #box --> 
