--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -9,10 +9,7 @@ Author: Ekaterina Kuznetsova
 01=BASE   
 -----------------------------------------------------------------------------*/
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:300&subset=latin,cyrillic-ext,cyrillic,latin-ext);
-@import url(http://fonts.googleapis.com/css?family=Roboto:700italic&subset=latin,cyrillic);
-@import url(http://fonts.googleapis.com/css?family=Roboto+Slab:700&subset=latin,cyrillic);
-@import url(http://fonts.googleapis.com/css?family=PT+Serif+Caption:400italic&subset=latin,cyrillic);
-@import url(http://fonts.googleapis.com/css?family=Noto+Sans:700italic&subset=latin,cyrillic);
+@import url(http://fonts.googleapis.com/css?family=PT+Serif+Caption&subset=latin,cyrillic);
 
 /* Box Model Hack */
 * {
@@ -67,7 +64,7 @@ margin-bottom: 20px;
 }
 
 h2 {
-  font: "Josefin Slab","Helvetica Neue",Helvetica,Arial,sans-serif;
+  font-family: 'PT Serif Caption', serif;
 }
 
 h3 {
@@ -92,6 +89,11 @@ border-style: inset;
 border-width: 1px;
 }
 
+strong {
+  font-weight: bold;
+  color: rgb(0,0,0);
+}
+
 
 .container {
   margin: 0 auto 0 auto;
@@ -102,14 +104,14 @@ border-width: 1px;
 02=BRAND CONTAINER   
 -----------------------------------------------------------------------------*/
 .brand{
-  font-family: 'Noto Sans', sans-serif;
+  font-family: 'PT Serif Caption', serif;
   display: inherit;
   margin: 0;
   padding: 30px 0 10px;
   text-align: center;
   text-shadow: 1px 1px 2px rgba(0,0,0,0.5);
   font-size: 3em;
-  font-weight: 700;
+  font-weight: 400px;
   line-height: normal;
   color: #fff;
 }
@@ -210,9 +212,14 @@ letter-spacing: 3px;
   margin-left: 85px;
 }
 
+.col-sm-10 {
+    text-align: center;  
+}
+
+
 .featurette-image.pull-left {
-margin-right: 40px;
-margin-top: -20px;
+margin-right: 23px;
+margin-top: 30px;
 }
 
 img {
@@ -229,7 +236,9 @@ border: #999999 solid 1px;
 min-width: 100%;
 }
 
-
+.btn {
+  margin-top: 20px;
+}
 
 
 
