--- a/app/views/pages/blog.html.erb
+++ b/app/views/pages/blog.html.erb
@@ -8,7 +8,7 @@
                         <strong>блог</strong>
                     </h2>
                     <hr>
-                </div>
+                </div><!-- #col-lg-12 Наш Блог-->
                 <div class="col-lg-12 text-center">
                     <img class="img-responsive img-border img-full" src=<%= asset_path('blog-1.jpg') %>/>
                     
@@ -19,10 +19,9 @@
                     <p>Lid est laborum dolo rumes fugats untras. Etharums ser quidem rerum facilis dolores nemis omnis fugats vitaes nemo minima rerums unsers sadips amets. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
                     <a href="#" class="btn btn-default btn-lg">Read More</a>
                     <hr>
-                </div>
+                </div><!-- #col-lg-12 Post 1 -->
                 <div class="col-lg-12 text-center">
                     <img class="img-responsive img-border img-full" src=<%= asset_path('blog-2.jpg') %>/>
-                    <div class="fb-share-button" data-href="http://art-jz.herokuapp.com/" data-width="15"></div>
                     <h2>Post Title
                         <br>
                         <small>October 13, 2013</small>
@@ -30,7 +29,7 @@
                     <p>Lid est laborum dolo rumes fugats untras. Etharums ser quidem rerum facilis dolores nemis omnis fugats vitaes nemo minima rerums unsers sadips amets. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Lid est laborum dolo rumes fugats untras. Etharums ser quidem rerum facilis dolores nemis omnis fugats vitaes nemo minima rerums unsers sadips amets. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Lid est laborum dolo rumes fugats untras. Etharums ser quidem rerum facilis dolores nemis omnis fugats vitaes nemo minima rerums unsers sadips amets. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
                     <a href="#" class="btn btn-default btn-lg">Read More</a>
                     <hr>
-                </div>
+                </div><!-- #col-lg-12 Post 2 -->
                 <div class="col-lg-12 text-center">
                     <img class="img-responsive img-border img-full" src=<%= asset_path('blog-3.jpg') %>/>
                     <h2>Post Title
@@ -40,9 +39,7 @@
                     <p>Lid est laborum dolo rumes fugats untras. Etharums ser quidem rerum facilis dolores nemis omnis fugats vitaes nemo minima rerums unsers sadips amets. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
                     <a href="#" class="btn btn-default btn-lg">Read More</a>
                     <hr>
-                </div>
-
-                <div class="fb-post" data-href="https://www.facebook.com/FacebookDevelopers/posts/10151471074398553" data-width="1000"></div>
+                </div><!-- #col-lg-12 Post 3-->
 
                 <div class="col-lg-12 text-center">
                     <ul class="pager">
@@ -51,8 +48,8 @@
                         <li class="next"><a href="#">Newer →</a>
                         </li>
                     </ul>
-                </div>
+                </div><!-- #col-lg-12 Older Newer-->
                 <div class="clearfix"></div>
-            </div>
-        </div>
-</div>
+            </div><!-- #box --> 
+        </div><!-- #jumbotron center --> 
+</div><!-- #container --> 
