--- a/app/views/pages/events.html.erb
+++ b/app/views/pages/events.html.erb
@@ -5,45 +5,57 @@
                         <hr>
                         <h2 class="intro-text text-center">Предлагаем вашему вниманию</br></h2>
                         <hr>
-                </div></br>
+                </div></br><!-- #col-lg-12 Предлагаем вашему вниманию  -->
 
 		            <div class="col-lg-4 col-sm-6 text-center">
-		                <img class="img-circle img-responsive img-center pull-center" src="http://placehold.it/200x200" alt="">
+		                <img class="img-circle img-responsive img-center" src=<%= asset_path('privateclass.jpg') %> alt="Мастер-класс для вечеринки" style="width:200px;height:200px"/>
 		                <h3>Мастер-класс для частных целей</h3>
 		                <p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
 		                <p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
-		            </div>
+		            </div><!-- #col-lg-4 col-sm-6 Мастер-класс для частных целей -->
 		            <div class="col-lg-4 col-sm-6 text-center">
-		                <img class="img-circle img-responsive img-center" src="http://placehold.it/200x200" alt="">
+		                <img class="img-circle img-responsive img-center" src=<%= asset_path('corporateclass.jpg') %> alt="Корпоративный мастер-класс" style="width:200px;height:200px"/>
 		                <h3>Мастер-класс для корпоративных целей</h3>
 		                <p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
 		                <p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
-		            </div>
+		            </div><!-- #col-lg-4 col-sm-6 Мастер-класс для корпоративных целей -->
 		            <div class="col-lg-4 col-sm-6 text-center">
-		                <img class="img-circle img-responsive img-center" src="http://placehold.it/200x200" alt="">
+		                <img class="img-circle img-responsive img-center" src=<%= asset_path('plener.jpg') %> alt="Пленэр" style="width:200px;height:200px"/>
 		                <h3>Пленэр</h3>
 		                <p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
 		                <p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
-		            </div>
+		            </div><!-- #col-lg-4 col-sm-6 Пленэр -->
                 
                 <div class="col-lg-12">
 	                <p>
 	                   Стоимость услуг уточняйте по <%= link_to "телефону", contacts_path %>
 	                </p> 
-                </div></br>
+                </div></br><!-- #col-lg-12 Стоимость услуг  -->
 
 		            <div class="col-lg-12">
                         <hr>
-                        <h2 class="intro-text text-center">Выставки</br></h2>
+                        <h2 class="intro-text text-center">События</br></h2>
                         <hr>
-                </div></br>
+                </div></br><!-- #col-lg-12 События  -->
+                <div class="col-lg-12 text-center">
 
-                <iframe width="560" height="315" src="http://www.youtube.com/embed/nbQ086okQaI" frameborder="0" allowfullscreen></iframe>
+                	   <div class="col-md-10 col-sm-10">
+                	   	  <h2>Курс «Рисунок для ландшафтных дизайнеров и флористов»</h2>
+                	      <h3>15, 22, 29 ноября и 6, 13 декабря 2014г с 12.00 до 14.00</h3> 
+                	      <p>Стоимость курса 7500 руб</p>
+		                    <img class="img-responsive img-border img-full" src=<%= asset_path('landscape.jpg') %>/>
+		                    <a href="https://www.facebook.com/events/782873458437214/" class="btn btn-default btn-lg" target="_blank">Подробнее</a>
+		                    <hr>
+		                </div><!-- #col-md-10 col-sm-10 Курс «Рисунок для ландшафтных дизайнеров и флористов» -->
+                	   
+                </div><!-- #col-lg-12 Курс «Рисунок для ландшафтных дизайнеров и флористов» --> 	
+
+                
 
 
 		            <div class="clearfix"></div>
-		      </div>
+		      </div><!-- #box --> 
 		 
 		 
-		</div>
-</div>		
+		</div><!-- #jumbotron center --> 
+</div><!-- #container -->		
