--- a/app/views/pages/gallery.html.erb
+++ b/app/views/pages/gallery.html.erb
@@ -3,7 +3,7 @@
 		<div class="jumbotron">
          <div class="box">
                   
-				    <div class="slider center">
+				    <div class="slider center" id = "gallery">
 				        <div><img src="https://693a1bd9979a1f404145-4c0259fbf00f01bae696dd398c523543.ssl.cf3.rackcdn.com/350px-4960f4b5-8bf4-407a-a2f3-3a7984a21fed.jpg" title="Location image 3" alt="Location image 3" class="" height="350"></div>
 								<div><img src="https://693a1bd9979a1f404145-4c0259fbf00f01bae696dd398c523543.ssl.cf3.rackcdn.com/350px-88c51625-2dca-4dde-8c7b-0eefce813353.jpg" title="Location image 4" alt="Location image 4" class="" height="350"></div>
 								<div><img src="https://693a1bd9979a1f404145-4c0259fbf00f01bae696dd398c523543.ssl.cf3.rackcdn.com/350px-ed3df657-d337-454e-b9f6-0aabff9ec5d9.jpg" title="Location image 5" alt="Location image 5" class="" height="350"></div>
