--- a/app/views/pages/gallery.html.erb
+++ b/app/views/pages/gallery.html.erb
@@ -2,8 +2,40 @@
 
 		<div class="jumbotron">
          <div class="box">
-                  
+            <div class="col-lg-12">
+                        <hr>
+                        <h2 class="intro-text text-center">Живопись</br></h2>
+                        <hr>
+            </div></br><!-- #col-lg-12  Живопись -->       
 				    <div class="slider center" id = "gallery">
+				        <div><img src="https://693a1bd9979a1f404145-4c0259fbf00f01bae696dd398c523543.ssl.cf3.rackcdn.com/350px-4960f4b5-8bf4-407a-a2f3-3a7984a21fed.jpg" title="Location image 3" alt="Location image 3" class="" height="350"></div>
+								<div><img src="https://693a1bd9979a1f404145-4c0259fbf00f01bae696dd398c523543.ssl.cf3.rackcdn.com/350px-88c51625-2dca-4dde-8c7b-0eefce813353.jpg" title="Location image 4" alt="Location image 4" class="" height="350"></div>
+								<div><img src="https://693a1bd9979a1f404145-4c0259fbf00f01bae696dd398c523543.ssl.cf3.rackcdn.com/350px-ed3df657-d337-454e-b9f6-0aabff9ec5d9.jpg" title="Location image 5" alt="Location image 5" class="" height="350"></div>
+								<div><img src="https://693a1bd9979a1f404145-4c0259fbf00f01bae696dd398c523543.ssl.cf3.rackcdn.com/350px-7fe9cbb1-5813-4ada-84a4-72068d2eb7ef.jpg" title="Location image 6" alt="Location image 6" class="" height="350"></div>
+								<div><img src="https://693a1bd9979a1f404145-4c0259fbf00f01bae696dd398c523543.ssl.cf3.rackcdn.com/350px-2dd4757f-5e7a-48bc-948b-5c7d7f27d166.jpg" title="Location image 7" alt="Location image 7" class="" height="350"></div>
+								<div><img src="https://693a1bd9979a1f404145-4c0259fbf00f01bae696dd398c523543.ssl.cf3.rackcdn.com/350px-fb811523-ac2b-4913-8491-a6ba17fc5c6c.jpg" title="Location image 8" alt="Location image 8" class="" height="350"></div>
+				    </div><!-- #slider center gallery -->
+
+            <div class="col-lg-12">
+                        <hr>
+                        <h2 class="intro-text text-center">Рисунок</br></h2>
+                        <hr>
+            </div></br><!-- #col-lg-12  Рисунок -->  
+				    <div class="slider center" id = "gallery2">
+				        <div><img src="https://693a1bd9979a1f404145-4c0259fbf00f01bae696dd398c523543.ssl.cf3.rackcdn.com/350px-4960f4b5-8bf4-407a-a2f3-3a7984a21fed.jpg" title="Location image 3" alt="Location image 3" class="" height="350"></div>
+								<div><img src="https://693a1bd9979a1f404145-4c0259fbf00f01bae696dd398c523543.ssl.cf3.rackcdn.com/350px-88c51625-2dca-4dde-8c7b-0eefce813353.jpg" title="Location image 4" alt="Location image 4" class="" height="350"></div>
+								<div><img src="https://693a1bd9979a1f404145-4c0259fbf00f01bae696dd398c523543.ssl.cf3.rackcdn.com/350px-ed3df657-d337-454e-b9f6-0aabff9ec5d9.jpg" title="Location image 5" alt="Location image 5" class="" height="350"></div>
+								<div><img src="https://693a1bd9979a1f404145-4c0259fbf00f01bae696dd398c523543.ssl.cf3.rackcdn.com/350px-7fe9cbb1-5813-4ada-84a4-72068d2eb7ef.jpg" title="Location image 6" alt="Location image 6" class="" height="350"></div>
+								<div><img src="https://693a1bd9979a1f404145-4c0259fbf00f01bae696dd398c523543.ssl.cf3.rackcdn.com/350px-2dd4757f-5e7a-48bc-948b-5c7d7f27d166.jpg" title="Location image 7" alt="Location image 7" class="" height="350"></div>
+								<div><img src="https://693a1bd9979a1f404145-4c0259fbf00f01bae696dd398c523543.ssl.cf3.rackcdn.com/350px-fb811523-ac2b-4913-8491-a6ba17fc5c6c.jpg" title="Location image 8" alt="Location image 8" class="" height="350"></div>
+				    </div><!-- #slider center -->
+            
+            <div class="col-lg-12">
+                        <hr>
+                        <h2 class="intro-text text-center">Декор</br></h2>
+                        <hr>
+            </div></br><!-- #col-lg-12  Декор -->  
+				    <div class="slider center" id = "gallery3">
 				        <div><img src="https://693a1bd9979a1f404145-4c0259fbf00f01bae696dd398c523543.ssl.cf3.rackcdn.com/350px-4960f4b5-8bf4-407a-a2f3-3a7984a21fed.jpg" title="Location image 3" alt="Location image 3" class="" height="350"></div>
 								<div><img src="https://693a1bd9979a1f404145-4c0259fbf00f01bae696dd398c523543.ssl.cf3.rackcdn.com/350px-88c51625-2dca-4dde-8c7b-0eefce813353.jpg" title="Location image 4" alt="Location image 4" class="" height="350"></div>
 								<div><img src="https://693a1bd9979a1f404145-4c0259fbf00f01bae696dd398c523543.ssl.cf3.rackcdn.com/350px-ed3df657-d337-454e-b9f6-0aabff9ec5d9.jpg" title="Location image 5" alt="Location image 5" class="" height="350"></div>
