add photos to gallery

--- a/app/views/pages/gallery.html.erb
+++ b/app/views/pages/gallery.html.erb
@@ -8,11 +8,11 @@
                         <hr>
             </div></br><!-- #col-lg-12  Живопись -->       
 				    <div class="slider center" id = "gallery">
-				        <div><img src="https://693a1bd9979a1f404145-4c0259fbf00f01bae696dd398c523543.ssl.cf3.rackcdn.com/350px-4960f4b5-8bf4-407a-a2f3-3a7984a21fed.jpg" title="Location image 3" alt="Location image 3" class="" height="350"></div>
-								<div><img src="https://693a1bd9979a1f404145-4c0259fbf00f01bae696dd398c523543.ssl.cf3.rackcdn.com/350px-88c51625-2dca-4dde-8c7b-0eefce813353.jpg" title="Location image 4" alt="Location image 4" class="" height="350"></div>
-								<div><img src="https://693a1bd9979a1f404145-4c0259fbf00f01bae696dd398c523543.ssl.cf3.rackcdn.com/350px-ed3df657-d337-454e-b9f6-0aabff9ec5d9.jpg" title="Location image 5" alt="Location image 5" class="" height="350"></div>
-								<div><img src="https://693a1bd9979a1f404145-4c0259fbf00f01bae696dd398c523543.ssl.cf3.rackcdn.com/350px-7fe9cbb1-5813-4ada-84a4-72068d2eb7ef.jpg" title="Location image 6" alt="Location image 6" class="" height="350"></div>
-								<div><img src="https://693a1bd9979a1f404145-4c0259fbf00f01bae696dd398c523543.ssl.cf3.rackcdn.com/350px-2dd4757f-5e7a-48bc-948b-5c7d7f27d166.jpg" title="Location image 7" alt="Location image 7" class="" height="350"></div>
+				        <div><img src=<%= asset_path('givopis1.jpg') %> title="Живопись" alt="Живопись" class="" height="350"></div>
+								<div><img src=<%= asset_path('givopis2.jpg') %> title="Живопись" alt="Живопись" class="" height="350"></div>
+								<div><img src=<%= asset_path('givopis3.jpg') %> title="Живопись" alt="Живопись" class="" height="350"></div>
+								<div><img src=<%= asset_path('givopis4.jpg') %> title="Живопись" alt="Живопись" class="" height="350"></div>
+								<div><img src=<%= asset_path('givopis5.jpg') %> title="Живопись" alt="Живопись" class="" height="350"></div>
 								<div><img src="https://693a1bd9979a1f404145-4c0259fbf00f01bae696dd398c523543.ssl.cf3.rackcdn.com/350px-fb811523-ac2b-4913-8491-a6ba17fc5c6c.jpg" title="Location image 8" alt="Location image 8" class="" height="350"></div>
 				    </div><!-- #slider center gallery -->
 
@@ -22,12 +22,14 @@
                         <hr>
             </div></br><!-- #col-lg-12  Рисунок -->  
 				    <div class="slider center" id = "gallery2">
-				        <div><img src="https://693a1bd9979a1f404145-4c0259fbf00f01bae696dd398c523543.ssl.cf3.rackcdn.com/350px-4960f4b5-8bf4-407a-a2f3-3a7984a21fed.jpg" title="Location image 3" alt="Location image 3" class="" height="350"></div>
-								<div><img src="https://693a1bd9979a1f404145-4c0259fbf00f01bae696dd398c523543.ssl.cf3.rackcdn.com/350px-88c51625-2dca-4dde-8c7b-0eefce813353.jpg" title="Location image 4" alt="Location image 4" class="" height="350"></div>
-								<div><img src="https://693a1bd9979a1f404145-4c0259fbf00f01bae696dd398c523543.ssl.cf3.rackcdn.com/350px-ed3df657-d337-454e-b9f6-0aabff9ec5d9.jpg" title="Location image 5" alt="Location image 5" class="" height="350"></div>
-								<div><img src="https://693a1bd9979a1f404145-4c0259fbf00f01bae696dd398c523543.ssl.cf3.rackcdn.com/350px-7fe9cbb1-5813-4ada-84a4-72068d2eb7ef.jpg" title="Location image 6" alt="Location image 6" class="" height="350"></div>
-								<div><img src="https://693a1bd9979a1f404145-4c0259fbf00f01bae696dd398c523543.ssl.cf3.rackcdn.com/350px-2dd4757f-5e7a-48bc-948b-5c7d7f27d166.jpg" title="Location image 7" alt="Location image 7" class="" height="350"></div>
-								<div><img src="https://693a1bd9979a1f404145-4c0259fbf00f01bae696dd398c523543.ssl.cf3.rackcdn.com/350px-fb811523-ac2b-4913-8491-a6ba17fc5c6c.jpg" title="Location image 8" alt="Location image 8" class="" height="350"></div>
+				        <div><img src=<%= asset_path('risunok1.jpg') %> title="Рисунок" alt="Рисунок" class="" height="350"></div>
+								<div><img src=<%= asset_path('risunok2.jpg') %> title="Рисунок" alt="Рисунок" class="" height="350"></div>
+								<div><img src=<%= asset_path('risunok3.jpg') %> title="Рисунок" alt="Рисунок" class="" height="350"></div>
+								<div><img src=<%= asset_path('risunok4.jpg') %> title="Рисунок" alt="Рисунок" class="" height="350"></div>
+								<div><img src=<%= asset_path('risunok5.jpg') %> title="Рисунок" alt="Рисунок" class="" height="350"></div>
+								<div><img src=<%= asset_path('risunok6.jpg') %> title="Рисунок" alt="Рисунок" class="" height="350"></div>
+								<div><img src=<%= asset_path('risunok7.jpg') %> title="Рисунок" alt="Рисунок" class="" height="350"></div>
+								<div><img src=<%= asset_path('risunok8.jpg') %> title="Рисунок" alt="Рисунок" class="" height="350"></div>
 				    </div><!-- #slider center -->
             
             <div class="col-lg-12">
@@ -36,10 +38,10 @@
                         <hr>
             </div></br><!-- #col-lg-12  Декор -->  
 				    <div class="slider center" id = "gallery3">
-				        <div><img src="https://693a1bd9979a1f404145-4c0259fbf00f01bae696dd398c523543.ssl.cf3.rackcdn.com/350px-4960f4b5-8bf4-407a-a2f3-3a7984a21fed.jpg" title="Location image 3" alt="Location image 3" class="" height="350"></div>
-								<div><img src="https://693a1bd9979a1f404145-4c0259fbf00f01bae696dd398c523543.ssl.cf3.rackcdn.com/350px-88c51625-2dca-4dde-8c7b-0eefce813353.jpg" title="Location image 4" alt="Location image 4" class="" height="350"></div>
-								<div><img src="https://693a1bd9979a1f404145-4c0259fbf00f01bae696dd398c523543.ssl.cf3.rackcdn.com/350px-ed3df657-d337-454e-b9f6-0aabff9ec5d9.jpg" title="Location image 5" alt="Location image 5" class="" height="350"></div>
-								<div><img src="https://693a1bd9979a1f404145-4c0259fbf00f01bae696dd398c523543.ssl.cf3.rackcdn.com/350px-7fe9cbb1-5813-4ada-84a4-72068d2eb7ef.jpg" title="Location image 6" alt="Location image 6" class="" height="350"></div>
+				        <div><img src=<%= asset_path('dekor1.jpg') %> title="Декор" alt="Декор" class="" height="350"></div>
+								<div><img src=<%= asset_path('dekor2.jpg') %> title="Декор" alt="Декор" class="" height="350"></div>
+								<div><img src=<%= asset_path('dekor3.jpg') %> title="Декор" alt="Декор" class="" height="350"></div>
+								<div><img src=<%= asset_path('dekor4.jpg') %> title="Декор" alt="Декор" class="" height="350"></div>
 								<div><img src="https://693a1bd9979a1f404145-4c0259fbf00f01bae696dd398c523543.ssl.cf3.rackcdn.com/350px-2dd4757f-5e7a-48bc-948b-5c7d7f27d166.jpg" title="Location image 7" alt="Location image 7" class="" height="350"></div>
 								<div><img src="https://693a1bd9979a1f404145-4c0259fbf00f01bae696dd398c523543.ssl.cf3.rackcdn.com/350px-fb811523-ac2b-4913-8491-a6ba17fc5c6c.jpg" title="Location image 8" alt="Location image 8" class="" height="350"></div>
 				    </div><!-- #slider center -->
