p.column more margin between columns

--- a/app/views/pages/events.html.erb
+++ b/app/views/pages/events.html.erb
@@ -10,20 +10,20 @@
 		            <div class="col-lg-4 col-sm-6 text-center">
 		                <img class="img-circle img-responsive img-center" src=<%= asset_path('privateclass.jpg') %> alt="Мастер-класс для вечеринки" style="width:200px;height:200px"/>
 		                <h3>Мастер-класс для частных целей</h3>
-		                <p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
-		                <p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
+		                <p class="column">What does this team member to? Keep it short! This is also a great spot for social links!</p>
+		                <p class="column">What does this team member to? Keep it short! This is also a great spot for social links!</p>
 		            </div><!-- #col-lg-4 col-sm-6 Мастер-класс для частных целей -->
 		            <div class="col-lg-4 col-sm-6 text-center">
 		                <img class="img-circle img-responsive img-center" src=<%= asset_path('corporateclass.jpg') %> alt="Корпоративный мастер-класс" style="width:200px;height:200px"/>
 		                <h3>Мастер-класс для корпоративных целей</h3>
-		                <p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
-		                <p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
+		                <p class="column">What does this team member to? Keep it short! This is also a great spot for social links!</p>
+		                <p class="column">What does this team member to? Keep it short! This is also a great spot for social links!</p>
 		            </div><!-- #col-lg-4 col-sm-6 Мастер-класс для корпоративных целей -->
 		            <div class="col-lg-4 col-sm-6 text-center">
 		                <img class="img-circle img-responsive img-center" src=<%= asset_path('plener.jpg') %> alt="Пленэр" style="width:200px;height:200px"/>
 		                <h3>Пленэр</h3>
-		                <p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
-		                <p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
+		                <p class="column">What does this team member to? Keep it short! This is also a great spot for social links!</p>
+		                <p class="column">What does this team member to? Keep it short! This is also a great spot for social links!</p>
 		            </div><!-- #col-lg-4 col-sm-6 Пленэр -->
                 <div class="clear"></div>
 
