--- a/app/views/pages/gallery.html.erb
+++ b/app/views/pages/gallery.html.erb
@@ -14,8 +14,8 @@
 								<div><img src=<%= asset_path('givopis_4.jpg') %> title="Живопись 4" alt="Живопись" class="" height="350"></div>
 								<div><img src=<%= asset_path('givopis5.jpg') %> title="Живопись 5" alt="Живопись" class="" height="350"></div>
 								<div><img src=<%= asset_path('givopis6.jpg') %> title="Живопись 6" alt="Живопись" class="" height="350"></div>
-								<div><img src=<%= asset_path('givopis7.jpg') %> title="Живопись 7" alt="Живопись" class="" height="350"></div>
-								<div><img src=<%= asset_path('givopis8.jpg') %> title="Живопись 8" alt="Живопись" class="" height="350"></div>
+								<!-- <div><img src=<%= asset_path('givopis7.jpg') %> title="Живопись 7" alt="Живопись" class="" height="350"></div> --> 
+								<!-- <div><img src=<%= asset_path('givopis8.jpg') %> title="Живопись 8" alt="Живопись" class="" height="350"></div> --> 
 								<div><img src=<%= asset_path('givopis9.jpg') %> title="Живопись 9" alt="Живопись" class="" height="350"></div>
 								<div><img src=<%= asset_path('givopis10.jpg') %> title="Живопись 10" alt="Живопись" class="" height="350"></div>
 								
