add pics for home carousel and vk,youtube links

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,9 +22,9 @@
             <div class="brand">Студия живописи и рисунка Жанны Завидовой</div>
             <div class="address-bar">ул. Покровка, д.27 | +7 916 657 57 19 |
               <a href="https://www.facebook.com/groups/409745725725001/" class="ig-b-48 ig-b-48" target="_blank"><img src="http://www.iconsdb.com/icons/preview/white/facebook-3-m.png" alt="Facebook"></a> 
-              <a href="#" class="ig-b-48 ig-b-48" target="_blank"><img src=<%= asset_path('vk-s.png')%> alt="Vkontakte" /></a>
+              <a href="https://vk.com/club79357262" class="ig-b-48 ig-b-48" target="_blank"><img src=<%= asset_path('vk-s.png')%> alt="Vkontakte" /></a>
               <a href="http://instagram.com/artjz.studia" class="ig-b- ig-b-48" target="_blank"><img src="http://www.iconsdb.com/icons/preview/white/instagram-m.png" alt="Instagram"></a>
-              <a href="#" class="ig-b-48 ig-b-48" target="_blank"><img src="http://www.iconsdb.com/icons/preview/white/youtube-3-m.png" alt="Youtube"></a>
+              <a href="http://www.youtube.com/channel/UCb0_9o7QwVh6hhRJXG3tkUQ" class="ig-b-48 ig-b-48" target="_blank"><img src="http://www.iconsdb.com/icons/preview/white/youtube-3-m.png" alt="Youtube"></a>
             </div>
             
     	  </div><!-- #BRAND container --> 
@@ -36,9 +36,9 @@
 
         <div class="panel-heading center">
              <a href="https://www.facebook.com/groups/409745725725001/" class="ig-b-48 ig-b-48" target="_blank"><img src="http://www.iconsdb.com/icons/preview/white/facebook-3-l.png" alt="Facebook"></a>
-             <a href="#" class="ig-b-48 ig-b-48" target="_blank"><img src=<%= asset_path('vk.png')%> alt="Vkontakte" /></a>
+             <a href="https://vk.com/club79357262" class="ig-b-48 ig-b-48" target="_blank"><img src=<%= asset_path('vk.png')%> alt="Vkontakte" /></a>
              <a href="http://instagram.com/artjz.studia" class="ig-b- ig-b-48" target="_blank"><img src="http://www.iconsdb.com/icons/preview/white/instagram-l.png" alt="Instagram"></a>
-             <a href="#" class="ig-b-48 ig-b-48" target="_blank"><img src="http://www.iconsdb.com/icons/preview/white/youtube-3-l.png" alt="Youtube"></a>
+             <a href="http://www.youtube.com/channel/UCb0_9o7QwVh6hhRJXG3tkUQ" class="ig-b-48 ig-b-48" target="_blank"><img src="http://www.iconsdb.com/icons/preview/white/youtube-3-l.png" alt="Youtube"></a>
         </div><!-- #panel-heading center aka Social Icons --> 
 
         <%= render 'layouts/footer' %><!-- link to Footer page --> 
