--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -10,6 +10,9 @@
                                 <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
                                 <li data-target="#carousel-example-generic" data-slide-to="1"></li>
                                 <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+                                <li data-target="#carousel-example-generic" data-slide-to="3"></li>
+                                <li data-target="#carousel-example-generic" data-slide-to="4"></li>
+                                <li data-target="#carousel-example-generic" data-slide-to="5"></li>
                             </ol>
 
                             <!-- Wrapper for slides -->
@@ -22,6 +25,15 @@
                                 </div>
                                 <div class="item">
                                     <img class="img-responsive img-full" src=<%= asset_path('slide-3.jpg') %>/>
+                                </div>
+                                <div class="item">
+                                    <img class="img-responsive img-full" src=<%= asset_path('slide-4.jpg') %>/>
+                                </div>
+                                <div class="item">
+                                    <img class="img-responsive img-full" src=<%= asset_path('slide-5.jpg') %>/>
+                                </div>
+                                <div class="item">
+                                    <img class="img-responsive img-full" src=<%= asset_path('slide-6.jpg') %>/>
                                 </div>
                             </div><!-- #carousel-inner --> 
 
