--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -13,6 +13,9 @@
                                 <li data-target="#carousel-example-generic" data-slide-to="3"></li>
                                 <li data-target="#carousel-example-generic" data-slide-to="4"></li>
                                 <li data-target="#carousel-example-generic" data-slide-to="5"></li>
+                                <li data-target="#carousel-example-generic" data-slide-to="6"></li>
+                                <li data-target="#carousel-example-generic" data-slide-to="7"></li>
+                                <li data-target="#carousel-example-generic" data-slide-to="8"></li>
                             </ol>
 
                             <!-- Wrapper for slides -->
@@ -34,6 +37,15 @@
                                 </div>
                                 <div class="item">
                                     <img class="img-responsive img-full" src=<%= asset_path('slide-6.jpg') %>/>
+                                </div>
+                                <div class="item">
+                                    <img class="img-responsive img-full" src=<%= asset_path('slide-7.jpg') %>/>
+                                </div>
+                                <div class="item">
+                                    <img class="img-responsive img-full" src=<%= asset_path('slide-8.jpg') %>/>
+                                </div>
+                                <div class="item">
+                                    <img class="img-responsive img-full" src=<%= asset_path('slide-9.jpg') %>/>
                                 </div>
                             </div><!-- #carousel-inner --> 
 
